# src/docs/swagger.json
@@ -238,6 +238,38 @@
           }
         }
       }
+    },
+    "/message/import": {
+      "post": {
+        "tags": [
+          "Message"
+        ],
+        "summary": "Import message csv file",
+        "description": "",
+        "operationId": "messageImport",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "formData",
+            "name": "csv",
+            "type": "file",
+            "description": "message csv file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "status": "success"
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      }
     }
   },
   "definitions": {
