# src/routes/message.route.ts
@@ -2,6 +2,7 @@ import express, { Router } from 'express';
 import { MessageController } from '../controllers';
 import { MessageValidation } from '../validations';
 import { AsyncError } from '../errorhandlers';
+import { csvUpload } from '../middleware/upload';
 
 const router: Router = express.Router();
 
@@ -21,5 +22,6 @@ router.route('/message/agent/:agentId').get(
 );
 
 router.route('/message/search').get(AsyncError(MessageController.search));
+router.route('/message/import').post(csvUpload, AsyncError(MessageController.importMessages));
 
 export default router
